src/client/css/Landing.css
/* help popup */

.help-popup {
    display: none;
    position: absolute;
    top: 15%;
    left: calc( 50% - 300px );
    width: 600px;
    height: 430px;
    background-color: #888;
    border: 2px solid #fff;
    z-index: 100;
}

.help-popup .icon {
    position: absolute;
    top: 85px;
    right: 20px;
    width: 150px;
    height: 65px;
    background-image: url(/resources/img/Tower-icon.png);
    background-size: 100% 100%;
    filter: grayscale(0.5) brightness(3.5);
}
.help-popup .header {
    width: 100%;
    height: 43px;
    border-bottom: 1px solid #818181;
    margin-bottom: 15px;
}
.help-popup .block-title {
    margin-left: 20px;
    font-size: 17px;
    color: #00b6ff;
    font-weight: bold;
}
.help-popup p {
    margin-left: 50px;
    color: #fff;
}
.help-popup .title {
    position: absolute;
    top: 8px;
    left: 10px;
    color: #fff;
    font-weight: bold;
    font-size: 20px;
}

.help-popup .close {
    position: absolute;
    top: 5px;
    right: 10px;
    font-size: 30px;
    color: #fff;
    opacity: 0.7;
    transition: opacity 200ms ease;
}
.help-popup .close:hover {
    opacity: 1;
}
.help-popup .close:active {
    top: 6px;
}

.help-popup .ok-btn {
    position: absolute;
    bottom: 20px;
    left: calc( 50% - 75px );
    width: 150px;
    padding: 10px 0px;
    background-color: #00b6ff;
    text-align: center;
    font: normal 15px 'Roboto';
    color: #fff;
    border: 1px solid #0493CC;
    opacity: 0.8;
    transition: opacity 200ms ease;
}
.help-popup .ok-btn:hover {
    opacity: 1;
}

/**/

#help {
    position: absolute;
    top: 16px;
    right: 188px;
    width: 50px;
    height: 50px;
    background-image: url(/resources/img/help.png);
    background-size: 100%;
    opacity: 0.7;
    transition: opacity 200ms ease;
}

#help:hover {
    opacity: 0.85;
}

#help:active {
    top: 17px;
    opacity: 1;
}

/**/

#fullscreen-on-off {
    position: absolute;
    top: 18px;
    right: 20px;
    width: 50px;
    height: 40px;
    background-image: url(/resources/img/fullscreen-on-off.png);
    background-size: 100% 200%;
    opacity: 0.7;
    transition: opacity 200ms ease;
}

#fullscreen-on-off:hover {
    opacity: 0.85;
}

#fullscreen-on-off:active {
    top: 21px;
    opacity: 1;
}

#fullscreen-on-off[screen="true"] {
    background-position: 0% 100%;
}

/**/

#graphics-quality {
    position: absolute;
    top: 20px;
    right: 80px;
    width: 50px;
    height: 40px;
    background-image: url(/resources/img/tank-quality.png);
    background-size: 100% 200%;
    opacity: 0.7;
    transition: opacity 200ms ease;
}

#graphics-quality:hover {
    opacity: 0.85;
}

#graphics-quality:active {
    top: 21px;
    opacity: 1;
}

#graphics-quality[hq="true"] {
    background-position: 0% 100%;
}

/* sound-on-off */

#sound-on-off {
    position: absolute;
    top: 10px;
    right: 129px;
    width: 60px;
    height: 60px;
    background-image: url('../resources/img/sound-on-off.png');
    background-size: 100% 200%;
    opacity: 0.7;
    transition: opacity 200ms ease;
}

#sound-on-off:hover {
    opacity: 0.85;
}

#sound-on-off:active {
    top: 11px;
    opacity: 1;
}

#sound-on-off[sound="true"] {
    background-position: 0% 100%;
}

.top-left-like-btns {
    position: absolute;
    left: 5px;
    top: 5px;
}

.top-left-like-btns .fb-like {
    opacity: 0;
    margin: 3px;
}

.top-left-like-btns .folow-btn {
    opacity: 0;
    margin: 3px;
}

#signin-box-wrapper {
    position: absolute;
    top: 19%;
    left: 0px;
    width: 100%;
    z-index: 1;
}

#signin-box-wrapper #signin-box {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    width: 340px;
    border: 1px solid #CCC;
    box-shadow: #888 0 0 40px;
    background-color: #fff;
}

#signin-box-wrapper #signin-box .note {
    display: table;
    margin-right: auto;
    margin-left: auto;
    margin-top: 3px;
    font-size: 12px;
    color: #ff9844;
    text-align: center;
}

#signin-box-wrapper #signin-box #title {
    position: relative;
    margin-top: 30px;
    letter-spacing: 0.1em;
    font: normal 35px 'Roboto';
    color: #222;
    text-align: center;
}

#signin-box-wrapper #signin-box #title #alpha {
    right: 43px;
    bottom: 4px;
    position: absolute;
    font: bold 14px 'Roboto';
    color: #00b6ff;
}

#signin-box-wrapper #signin-box .field {
    display: table;
    margin-top: 10px;
    margin-left: 16px;
    margin-right: auto;
    padding: 8px 15px;
    width: 80%;
    font: normal 15px 'Roboto';
    cursor: url('../resources/img/cursor.png'), auto;
    outline: none;
}

#signin-box-wrapper #signin-box #play-change-btn {
    position: relative;
    margin-top: 8px;
    width: 100%;
    height: 41px;
}

#signin-box-wrapper #signin-box #play-btn #play-btn-text {
    position: relative;
    top: 10px;
}

#signin-box-wrapper #signin-box #play-btn {
    float: left;
    background-color: #00b6ff;
    height: 41px;
    margin-left: 16px;
    margin-right: auto;
    width: 90%;
    text-align: center;
    font: normal 15px 'Roboto';
    color: #fff;
    border: 1px solid #0493CC;
    opacity: 0.8;
    transition: opacity 200ms ease;
}

#signin-box-wrapper #signin-box #play-btn:hover {
    opacity: 1;
}

#signin-box-wrapper #signin-box #instructions {
    position: relative;
    width: 100%;
    margin-top: 11px;
    font: normal 13px arial, tahoma;
    text-align: center;
    color: #888;
}

/**/

.new-features-box {
    position: absolute;
    top: 19%;
    left: 0px;
    width: 100%;
    height: 486px;
}

.new-features-box .new-features {
    position: relative;
    height: 486px;
    margin-left: auto;
    margin-right: auto;
    width: 300px;
    float: left;
    left: calc( 50% + 190px );
    border: 1px solid #333;
    overflow-y: scroll;
    background-color: transparent;
    z-index: 2;
}

.new-features-box .new-features .title {
    position: relative;
    margin-left: 20px;
    color: #ffffff;
}
/* ... */

